// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimRecord form should allow content indicators to be selected 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      class=\\"MuiGrid-container-3 StandardPage\\"
    >
+     <h2
+       class=\\"MuiTypography-root-100 MuiTypography-h4-115 MuiTypography-colorPrimary-130 Page-layoutTitle-2\\"
+     >
+       Claim a work
+     </h2>
      <div
        class=\\"MuiGrid-item-4 Page-layoutCard-1\\"
+     >
+       <form>
+         <div
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-347 MuiPaper-elevation1-350 MuiPaper-rounded-348 MuiCard-root-346 Cards-card-342 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-374\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-377\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-378\\"
+                   >
+                     You are claiming to be an author for the following work:
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-380\\"
+               >
+                 <div
+                   class=\\"publicationCitation\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                     >
+                       <div
+                         class=\\"MuiGrid-container-3\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                           style=\\"min-width: 1px;\\"
+                         >
+                           <h6
+                             class=\\"MuiTypography-root-100 MuiTypography-h6-117 PublicationCitation-citationTitle-382\\"
+                           >
+                             <a
+                               href=\\"/view/UQ:396321\\"
+                             >
+                               Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer
+                             </a>
+                           </h6>
+                         </div>
+                         <div
+                           class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationText-383\\"
+                         >
+                           <div
+                             class=\\"citationContent citationJournalArticle\\"
+                           >
+                             <span
+                               class=\\"citationAuthors\\"
+                             >
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                 Milevskiy, Michael J. G., 
+                               </span>
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                 Al-Ejeh, Fares
+                               </span>
+                               <span
+                                 class=\\"citationAuthor\\"
+                               >
+                                  and Saunus, Jodi M.
+                               </span>
+                                
+                             </span>
+                             <span
+                               class=\\"citationDate\\"
+                             >
+                               (2016).
+                             </span>
+                             <span
+                               class=\\"citationTitle\\"
+                             >
+                                Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer.
+                             </span>
+                             <span
+                               class=\\"citationJournalName\\"
+                             >
+                                Human Molecular Genetics 
+                             </span>
+                             <span
+                               class=\\"citationVolumeNumber\\"
+                             >
+                                25 
+                             </span>
+                             <span
+                               class=\\"citationIssueNumber\\"
+                             >
+                               (15) 
+                             </span>
+                             <span
+                               class=\\"citationPageRange\\"
+                             >
+                               <span
+                                 class=\\"citationStartPage\\"
+                               >
+                                 3269
+                               </span>
+                               -
+                               <span
+                                 class=\\"citationEndPage\\"
+                               >
+                                 3283
+                               </span>
+                             </span>
+                             <span>
+                               . 
+                             </span>
+                             <a
+                               aria-label=\\"Open this DOI in an new window\\"
+                               class=\\"citationDoiLink ExternalLink-externalLink-388\\"
+                               href=\\"https://doi.org/10.1093/hmg/ddw177\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Open this DOI in an new window\\"
                              >
+                               <svg
+                                 aria-hidden=\\"true\\"
+                                 class=\\"MuiSvgIcon-root-390 ExternalLink-externalLinkIcon-389\\"
+                                 focusable=\\"false\\"
+                                 role=\\"presentation\\"
+                                 viewBox=\\"0 0 24 24\\"
+                               >
+                                 <path
+                                   d=\\"M0 0h24v24H0z\\"
+                                   fill=\\"none\\"
+                                 />
+                                 <path
+                                   d=\\"M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z\\"
+                                 />
+                               </svg>
+                               https://doi.org/10.1093/hmg/ddw177
+                             </a>
+                           </div>
+                         </div>
+                         <div
+                           class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationCounts-384\\"
+                         >
                            <div
                              class=\\"MuiGrid-container-3\\"
                            >
                              <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-auto-44\\"
+                             >
+                               <a
+                                 aria-label=\\"Full citation in Web of science will open in a new window\\"
+                                 class=\\"wosCitationCount CitationCountView-citationCount-400 ExternalLink-externalLink-388\\"
+                                 href=\\"http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=000393077300011&SrcAuth=uqueensland\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Full citation in Web of science will open in a new window\\"
+                               >
+                                 <span
+                                   class=\\"fez-icon wos large\\"
+                                 />
+                                 <span
+                                   class=\\"CitationCountView-citationCountNumber-401\\"
+                                 >
+                                   6
+                                 </span>
+                               </a>
+                               <a
+                                 aria-label=\\"Full citation in Scopus will open in a new window\\"
+                                 class=\\"scopusCitationCount CitationCountView-citationCount-400 ExternalLink-externalLink-388\\"
+                                 href=\\"http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=2-s2.0-85014391875&origin=inward\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Full citation in Scopus will open in a new window\\"
+                               >
+                                 <span
+                                   class=\\"fez-icon scopus large\\"
+                                 />
+                                 <span
+                                   class=\\"CitationCountView-citationCountNumber-401\\"
+                                 >
+                                   7
+                                 </span>
+                               </a>
+                               <a
+                                 aria-label=\\"Full citation in Altmetric will open in a new window\\"
+                                 class=\\"altmetricCitationCount CitationCountView-citationCount-400 ExternalLink-externalLink-388\\"
+                                 href=\\"https://queensland.altmetric.com/details/9271343\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Full citation in Altmetric will open in a new window\\"
+                               >
+                                 <span
+                                   class=\\"fez-icon altmetric large\\"
+                                 />
+                                 <span
+                                   class=\\"CitationCountView-citationCountNumber-401\\"
+                                 >
+                                   2
+                                 </span>
+                               </a>
+                               <a
+                                 aria-label=\\"Full citation in Google scholar will open in a new window\\"
+                                 class=\\"googleCitationCount CitationCountView-citationCount-400 ExternalLink-externalLink-388\\"
+                                 href=\\"https://scholar.google.com/scholar?q=intitle:Long-range%20regulators%20of%20the%20lncRNA%20HOTAIR%20enhance%20its%20prognostic%20potential%20in%20breast%20cancer\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Full citation in Google scholar will open in a new window\\"
+                               >
+                                 <span
+                                   class=\\"fez-icon google large\\"
+                                 />
+                               </a>
+                               <span
+                                 class=\\"noOaIcon\\"
+                               />
+                             </div>
+                             <div
+                               class=\\"MuiGrid-item-4\\"
+                             >
+                               <a
+                                 class=\\"CitationCounts-statsLink-399 ExternalLink-externalLink-388\\"
+                                 href=\\"https://app.library.uq.edu.au/#/authors/view/UQ:396321\\"
+                                 rel=\\"noopener noreferrer\\"
+                                 tabindex=\\"0\\"
+                                 target=\\"_blank\\"
+                                 theme=\\"[object Object]\\"
+                                 title=\\"Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer\\"
+                               >
+                                 <svg
+                                   aria-hidden=\\"true\\"
+                                   class=\\"MuiSvgIcon-root-390 ExternalLink-externalLinkIcon-389\\"
+                                   focusable=\\"false\\"
+                                   role=\\"presentation\\"
+                                   viewBox=\\"0 0 24 24\\"
+                                 >
+                                   <path
+                                     d=\\"M0 0h24v24H0z\\"
+                                     fill=\\"none\\"
+                                   />
+                                   <path
+                                     d=\\"M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z\\"
+                                   />
+                                 </svg>
+                                 View full statistics
+                               </a>
+                             </div>
+                             <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                             />
+                           </div>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                   <hr
+                     class=\\"MuiDivider-root-404 PublicationCitation-divider-381\\"
+                   />
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <span
+                       class=\\"MuiTypography-root-100 MuiTypography-caption-110 MuiTypography-gutterBottom-127\\"
+                     >
+                       <span
+                         class=\\"PublicationCitation-contentIndicatorTitle-386\\"
+                       >
+                         Content Indicators:
+                       </span>
+                       Scholarship of Teaching and Learning, Protocol
+                     </span>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <span />
+           <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-347 MuiPaper-elevation1-350 MuiPaper-rounded-348 MuiCard-root-346 Cards-card-342 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-374\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-377\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-378\\"
                    >
+                     Author linking
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-380\\"
+               >
+                 <label
+                   for=\\"authorLinking\\"
+                 >
+                   We were unable to automatically detect who you are from the list of authors on this work. Please select your name from the list below: 
+                 </label>
                  <div
-             style=\\"padding: 8px;\\"
+                   class=\\"requiredField\\"
                  >
                    <div
-               class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-8-25 MuiGrid-align-items-xs-center-11 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                     class=\\"MuiGrid-container-3\\"
                    >
                      <div
-                 class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-                 style=\\"text-align: center;\\"
+                       class=\\"MuiGrid-item-4 WithTheme-WithWidth-AuthorLinking---infiniteContainer-422\\"
                      >
                        <div
-                   class=\\"MuiCircularProgress-root-333 MuiCircularProgress-colorPrimary-336 MuiCircularProgress-indeterminate-335\\"
-                   role=\\"progressbar\\"
-                   style=\\"width: 18px; height: 18px;\\"
+                         class=\\"\\"
+                         style=\\"height: 200px; overflow-x: hidden; overflow-y: scroll;\\"
+                       >
+                         <div>
+                           <div
+                             style=\\"width: 100%; height: 0px;\\"
+                           />
+                           <div
+                             class=\\"MuiGrid-container-3\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51 MuiGrid-grid-md-4-63\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-container-3\\"
+                               >
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <button
+                                     class=\\"MuiButtonBase-root-441 MuiButtonBase-disabled-442 MuiButton-root-514 MuiButton-text-516 MuiButton-flat-519 MuiButton-disabled-534 MuiButton-fullWidth-539 AuthorItem-buttonBase-541\\"
+                                     disabled=\\"\\"
+                                     tabindex=\\"-1\\"
+                                     type=\\"button\\"
+                                   >
+                                     <span
+                                       class=\\"MuiButton-label-515\\"
                                      >
                                        <svg
-                     class=\\"MuiCircularProgress-svg-338\\"
-                     viewBox=\\"22 22 44 44\\"
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-390 AuthorItem-authorLinkIcon-540\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
+                                       >
+                                         <path
+                                           d=\\"M0 0h24v24H0z\\"
+                                           fill=\\"none\\"
+                                         />
+                                         <path
+                                           d=\\"M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z\\"
+                                         />
+                                       </svg>
+                                       Milevskiy, Michael J. G.
+                                     </span>
+                                   </button>
+                                 </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 AuthorItem-authorOrder-542\\"
+                                   >
+                                     First  listed author
+                                   </span>
+                                 </div>
+                               </div>
+                             </div>
+                             <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51 MuiGrid-grid-md-4-63\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-container-3\\"
+                               >
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <button
+                                     class=\\"MuiButtonBase-root-441 MuiButton-root-514 MuiButton-text-516 MuiButton-flat-519 MuiButton-fullWidth-539 AuthorItem-buttonBase-541\\"
+                                     tabindex=\\"0\\"
+                                     type=\\"button\\"
+                                   >
+                                     <span
+                                       class=\\"MuiButton-label-515\\"
+                                     >
+                                       <svg
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-390 MuiSvgIcon-colorSecondary-392 AuthorItem-authorLinkIcon-540\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
                                        >
-                     <circle
-                       class=\\"MuiCircularProgress-circle-339 MuiCircularProgress-circleIndeterminate-341\\"
-                       cx=\\"44\\"
-                       cy=\\"44\\"
+                                         <path
+                                           d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"
+                                         />
+                                         <path
+                                           d=\\"M0 0h24v24H0z\\"
                                            fill=\\"none\\"
-                       r=\\"21\\"
-                       stroke-width=\\"2\\"
                                          />
                                        </svg>
+                                       Al-Ejeh, Fares
+                                     </span>
+                                     <span
+                                       class=\\"MuiTouchRipple-root-444\\"
+                                     />
+                                   </button>
                                  </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 AuthorItem-authorOrder-542\\"
+                                   >
+                                     Second  listed author
+                                   </span>
                                  </div>
+                               </div>
+                             </div>
                              <div
-                 class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-                 style=\\"text-align: center;\\"
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51 MuiGrid-grid-md-4-63\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-container-3\\"
+                               >
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <button
+                                     class=\\"MuiButtonBase-root-441 MuiButtonBase-disabled-442 MuiButton-root-514 MuiButton-text-516 MuiButton-flat-519 MuiButton-disabled-534 MuiButton-fullWidth-539 AuthorItem-buttonBase-541\\"
+                                     disabled=\\"\\"
+                                     tabindex=\\"-1\\"
+                                     type=\\"button\\"
                                    >
                                      <span
-                   class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorPrimary-130\\"
-                   style=\\"font-size: 1.33rem;\\"
+                                       class=\\"MuiButton-label-515\\"
+                                     >
+                                       <svg
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-390 AuthorItem-authorLinkIcon-540\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
                                        >
-                   Loading record to claim
+                                         <path
+                                           d=\\"M0 0h24v24H0z\\"
+                                           fill=\\"none\\"
+                                         />
+                                         <path
+                                           d=\\"M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z\\"
+                                         />
+                                       </svg>
+                                       Saunus, Jodi M.
+                                     </span>
+                                   </button>
+                                 </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 AuthorItem-authorOrder-542\\"
+                                   >
+                                     Third  listed author
+                                   </span>
+                                 </div>
+                               </div>
+                             </div>
+                           </div>
+                           <div />
+                           <div
+                             style=\\"width: 100%; height: 0px;\\"
+                           />
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-347 MuiPaper-elevation1-350 MuiPaper-rounded-348 MuiCard-root-346 Cards-card-342 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-374\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-377\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-378\\"
+                   >
+                     Optional: Content Indicators
+                   </h3>
+                 </div>
+                 <div
+                   class=\\"MuiCardHeader-action-376\\"
+                 >
+                   <button
+                     class=\\"MuiButtonBase-root-441 MuiIconButton-root-435\\"
+                     tabindex=\\"0\\"
+                     title=\\"Click for more information\\"
+                     type=\\"button\\"
+                   >
+                     <span
+                       class=\\"MuiIconButton-label-440\\"
+                     >
+                       <svg
+                         aria-hidden=\\"false\\"
+                         class=\\"MuiSvgIcon-root-390 HelpIcon-helpIcon-427\\"
+                         focusable=\\"false\\"
+                         role=\\"img\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M11 18h2v-2h-2v2zm1-16C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm0-14c-2.21 0-4 1.79-4 4h2c0-1.1.9-2 2-2s2 .9 2 2c0 2-3 1.75-3 5h2c0-2.25 3-2.5 3-5 0-2.21-1.79-4-4-4z\\"
+                         />
+                         <title>
+                           Click for more information
+                         </title>
+                       </svg>
+                     </span>
+                     <span
+                       class=\\"MuiTouchRipple-root-444\\"
+                     />
+                   </button>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-380\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <p
+                       class=\\"MuiTypography-root-100 MuiTypography-body2-108\\"
+                     >
+                       You can select multiple (of 3 available) content indicators to add more information about your work, but you cannot remove indicators already selected. To amend existing information, suggest a correction below.
+                     </p>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-452 MuiFormControl-fullWidth-455\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-463 MuiFormLabel-filled-467 MuiInputLabel-root-456 MuiInputLabel-formControl-457 MuiInputLabel-animated-460 MuiInputLabel-shrink-459\\"
+                         data-shrink=\\"true\\"
+                         id=\\"Please select relevant indicator(s).-label\\"
+                       >
+                         Please select relevant indicator(s).
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-490 MuiInput-root-477 MuiInput-underline-481 MuiInputBase-formControl-491 MuiInput-formControl-478\\"
+                       >
+                         <div
+                           class=\\"MuiSelect-root-470\\"
+                         >
+                           <div
+                             aria-haspopup=\\"true\\"
+                             aria-pressed=\\"false\\"
+                             class=\\"MuiSelect-select-471 MuiSelect-selectMenu-474 MuiInputBase-input-500 MuiInput-input-485\\"
+                             id=\\"content-indicators\\"
+                             role=\\"button\\"
+                             tabindex=\\"0\\"
+                           >
+                             Scholarship of Teaching and Learning, Protocol
+                           </div>
+                           <input
+                             style=\\"border: 1px solid red;\\"
+                             type=\\"hidden\\"
+                             value=\\"454079,454080\\"
+                           />
+                           <svg
+                             aria-hidden=\\"true\\"
+                             class=\\"MuiSvgIcon-root-390 MuiSelect-icon-476\\"
+                             focusable=\\"false\\"
+                             role=\\"presentation\\"
+                             viewBox=\\"0 0 24 24\\"
+                           >
+                             <path
+                               d=\\"M7 10l5 5 5-5z\\"
+                             />
+                           </svg>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-347 MuiPaper-elevation1-350 MuiPaper-rounded-348 MuiCard-root-346 Cards-card-342 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-374\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-377\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-378\\"
+                   >
+                     Optional: Suggest changes or add links to this work
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-380\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-16-26\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-452 MuiFormControl-fullWidth-455\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-463 MuiInputLabel-root-456 MuiInputLabel-formControl-457 MuiInputLabel-animated-460\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Typeedits/changes/commentshere\\"
+                         id=\\"Typeedits/changes/commentshere-label\\"
+                       >
+                         Type edits/changes/comments here
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-490 MuiInput-root-477 MuiInput-underline-481 MuiInputBase-fullWidth-499 MuiInput-fullWidth-484 MuiInputBase-formControl-491 MuiInput-formControl-478 MuiInputBase-multiline-498 MuiInput-multiline-483\\"
+                       >
+                         <textarea
+                           aria-invalid=\\"false\\"
+                           aria-label=\\"Type edits/changes/comments here\\"
+                           aria-labelledby=\\"Typeedits/changes/commentshere-label\\"
+                           class=\\"MuiInputBase-input-500 MuiInput-input-485 MuiInputBase-inputMultiline-502 MuiInput-inputMultiline-487\\"
+                           id=\\"Typeedits/changes/commentshere\\"
+                           label=\\"Type edits/changes/comments here\\"
+                           name=\\"comments\\"
+                           rows=\\"3\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-452 MuiFormControl-fullWidth-455\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-463 MuiInputLabel-root-456 MuiInputLabel-formControl-457 MuiInputLabel-animated-460\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Link(URL)\\"
+                         id=\\"Link(URL)-label\\"
+                       >
+                         Link (URL)
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-490 MuiInput-root-477 MuiInput-underline-481 MuiInputBase-fullWidth-499 MuiInput-fullWidth-484 MuiInputBase-formControl-491 MuiInput-formControl-478\\"
+                       >
+                         <input
+                           aria-invalid=\\"false\\"
+                           aria-label=\\"Link (URL)\\"
+                           aria-labelledby=\\"Link(URL)-label\\"
+                           class=\\"MuiInputBase-input-500 MuiInput-input-485\\"
+                           id=\\"Link(URL)\\"
+                           label=\\"Link (URL)\\"
+                           name=\\"rek_link\\"
+                           type=\\"text\\"
+                           value=\\"\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-347 MuiPaper-elevation1-350 MuiPaper-rounded-348 MuiCard-root-346 Cards-card-342 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-374\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-377\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-378\\"
+                   >
+                     Optional: Upload additional files
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-380\\"
+               >
+                 <p
+                   class=\\"MuiTypography-root-100 MuiTypography-body2-108 MuiTypography-gutterBottom-127\\"
+                 >
+                   You may add up to 10 files (max 8GB each)
+                 </p>
+                 <div
+                   class=\\"MuiGrid-container-3\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       id=\\"FileUploadDropZone\\"
+                       tabindex=\\"0\\"
+                     >
+                       <div
+                         aria-disabled=\\"false\\"
+                         class=\\"\\"
+                         style=\\"position: relative; padding: 0px;\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-container-3 FileUploadDropzoneStaticContent-dropzone-510\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <p
+                               class=\\"MuiTypography-root-100 MuiTypography-body2-108 FileUploadDropzoneStaticContent-heading-511\\"
+                             >
+                               File upload restrictions
+                             </p>
+                             <div>
+                               Please ensure your files:
+                               <ul>
+                                 <li>
+                                   begin with a letter and are less than 45 characters long
+                                 </li>
+                                 <li>
+                                   contain only upper and lowercase alphanumeric characters, and underscores
+                                 </li>
+                                 <li>
+                                   have only a single period which precedes the file extension: e.g. “.pdf”, “.mov”, “.tiff”, “.wav” etc.
+                                 </li>
+                                 <li>
+                                   two periods are allowed for multipart zip files. Allowed formats for part description are: e.g. “.001 ... .999”, “.r01 ... .r999” and “.part1 ... .part999”
+                                 </li>
+                                 <li>
+                                   are uploaded individually and not inside a folder
+                                 </li>
+                               </ul>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-container-3 MuiGrid-direction-xs-column-6 MuiGrid-align-items-xs-center-11 MuiGrid-justify-xs-center-20 FileUploadDropzoneStaticContent-instructions-512\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <svg
+                                   aria-hidden=\\"true\\"
+                                   class=\\"MuiSvgIcon-root-390 FileUploadDropzoneStaticContent-cloudIcon-513\\"
+                                   focusable=\\"false\\"
+                                   role=\\"presentation\\"
+                                   viewBox=\\"0 0 24 24\\"
+                                 >
+                                   <path
+                                     d=\\"M0 0h24v24H0z\\"
+                                     fill=\\"none\\"
+                                   />
+                                   <path
+                                     d=\\"M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z\\"
+                                   />
+                                 </svg>
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <p>
+                                   Click here to select files, or drag files into this area to upload
+                                 </p>
+                               </div>
+                             </div>
+                           </div>
+                         </div>
+                         <input
+                           aria-label=\\"Upload files\\"
+                           autocomplete=\\"off\\"
+                           id=\\"Uploader\\"
+                           multiple=\\"\\"
+                           style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
+                           type=\\"file\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-551 Alert-common-543\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 Alert-icon-544 alert-icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-390 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
+                         />
+                       </svg>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-545 alert-text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul>
+                           <li>
+                             You are required to select a author from the list, then confirm that it is you
+                           </li>
+                         </ul>
                        </span>
+                     </div>
+                   </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
+         <div
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+           />
+           <div
+             class=\\"MuiGrid-item-4\\"
+           >
+             <button
+               class=\\"MuiButtonBase-root-441 MuiButton-root-514 MuiButton-contained-525 MuiButton-raised-528 MuiButton-fullWidth-539\\"
+               tabindex=\\"0\\"
+               type=\\"button\\"
+             >
+               <span
+                 class=\\"MuiButton-label-515\\"
+               >
+                 Cancel this claim
+               </span>
+               <span
+                 class=\\"MuiTouchRipple-root-444\\"
+               />
+             </button>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4\\"
+           >
+             <button
+               class=\\"MuiButtonBase-root-441 MuiButtonBase-disabled-442 MuiButton-root-514 MuiButton-contained-525 MuiButton-containedPrimary-526 MuiButton-raised-528 MuiButton-raisedPrimary-529 MuiButton-disabled-534 MuiButton-fullWidth-539\\"
+               disabled=\\"\\"
+               id=\\"claimSubmit\\"
+               tabindex=\\"-1\\"
+               type=\\"button\\"
+             >
+               <span
+                 class=\\"MuiButton-label-515\\"
+               >
+                 Claim this work
+               </span>
+             </button>
+           </div>
+         </div>
+       </form>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`ClaimRecord form should allow content indicators to be selected 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -599,11 +599,12 @@
                          <div
                            class=\\"MuiSelect-root-470\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-471 MuiSelect-selectMenu-474 MuiInputBase-input-500 MuiInput-input-485\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >"
`;

exports[`ClaimRecord form should allow content indicators to be selected 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -301,11 +301,11 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <span />
+           <div />
            <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
            >
              <div
                class=\\"MuiPaper-root-347 MuiPaper-elevation1-350 MuiPaper-rounded-348 MuiCard-root-346 Cards-card-342 StandardCard\\"
@@ -606,16 +606,16 @@
                              class=\\"MuiSelect-select-471 MuiSelect-selectMenu-474 MuiInputBase-input-500 MuiInput-input-485\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol
+                             Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
                              type=\\"hidden\\"
-                             value=\\"454079,454080\\"
+                             value=\\"454079,454080,454081\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-390 MuiSelect-icon-476\\"
                              focusable=\\"false\\""
`;

exports[`ClaimRecord form should allow content indicators to be selected 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -606,16 +606,16 @@
                              class=\\"MuiSelect-select-471 MuiSelect-selectMenu-474 MuiInputBase-input-500 MuiInput-input-485\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol, Case Study
+                             Scholarship of Teaching and Learning, Protocol
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
                              type=\\"hidden\\"
-                             value=\\"454079,454080,454081\\"
+                             value=\\"454079,454080\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-390 MuiSelect-icon-476\\"
                              focusable=\\"false\\""
`;

exports[`ClaimRecord form should validate the form where applicable and submit correctly 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -416,17 +416,17 @@
                                      <span
                                        class=\\"MuiButton-label-1090\\"
                                      >
                                        <svg
                                          aria-hidden=\\"true\\"
-                                         class=\\"MuiSvgIcon-root-965 MuiSvgIcon-colorSecondary-967 AuthorItem-authorLinkIcon-1115\\"
+                                         class=\\"MuiSvgIcon-root-965 MuiSvgIcon-colorPrimary-966 AuthorItem-authorLinkIcon-1115\\"
                                          focusable=\\"false\\"
                                          role=\\"presentation\\"
                                          viewBox=\\"0 0 24 24\\"
                                        >
                                          <path
-                                           d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"
+                                           d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"
                                          />
                                          <path
                                            d=\\"M0 0h24v24H0z\\"
                                            fill=\\"none\\"
                                          />
@@ -504,10 +504,52 @@
                            />
                          </div>
                        </div>
                      </div>
                    </div>
+                   <label
+                     class=\\"MuiFormControlLabel-root-1151 WithTheme-WithWidth-AuthorLinking---root-998\\"
+                   >
+                     <span
+                       class=\\"MuiButtonBase-root-1016 MuiIconButton-root-1010 MuiSwitchBase-root-1161 MuiCheckbox-root-1155 WithTheme-WithWidth-AuthorLinking---checkboxRoot-1000 MuiCheckbox-colorSecondary-1160 MuiSwitchBase-checked-1162 MuiCheckbox-checked-1156 WithTheme-WithWidth-AuthorLinking---checkboxChecked-1001\\"
+                     >
+                       <span
+                         class=\\"MuiIconButton-label-1015\\"
+                       >
+                         <svg
+                           aria-hidden=\\"true\\"
+                           class=\\"MuiSvgIcon-root-965\\"
+                           focusable=\\"false\\"
+                           role=\\"presentation\\"
+                           viewBox=\\"0 0 24 24\\"
+                         >
+                           <path
+                             d=\\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\"
+                           />
+                         </svg>
+                         <input
+                           class=\\"MuiSwitchBase-input-1164\\"
+                           data-indeterminate=\\"false\\"
+                           id=\\"authorAcceptDeclaration\\"
+                           type=\\"checkbox\\"
+                           value=\\"\\"
+                         />
+                       </span>
+                       <span
+                         class=\\"MuiTouchRipple-root-1019\\"
+                       />
+                     </span>
+                     <span
+                       class=\\"MuiTypography-root-675 MuiTypography-body2-683 MuiFormControlLabel-label-1154\\"
+                     >
+                       <p
+                         class=\\"MuiTypography-root-675 WithTheme-WithWidth-AuthorLinking---label-999 MuiTypography-body2-683 MuiTypography-colorSecondary-706\\"
+                       >
+                         I confirm and understand that I am claiming this work under the above name, and confirm this is me
+                       </p>
+                     </span>
+                   </label>
                  </div>
                </div>
              </div>
            </div>
            <div
@@ -846,66 +888,11 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div
-             class=\\"MuiGrid-item-579 MuiGrid-grid-xs-12-618\\"
-           >
-             <div
-               class=\\"Alert\\"
-               style=\\"padding: 12px;\\"
-             >
-               <div
-                 class=\\"MuiGrid-container-578 MuiGrid-spacing-xs-24-602 MuiGrid-align-items-xs-flex-start-587 MuiGrid-align-content-xs-center-590 MuiGrid-justify-xs-center-595 Alert-warning-1126 Alert-common-1118\\"
-               >
-                 <div
-                   class=\\"MuiGrid-item-579 MuiGrid-grid-xs-12-618 MuiGrid-grid-sm-true-620\\"
-                 >
-                   <div
-                     class=\\"MuiGrid-container-578 MuiGrid-align-items-xs-flex-start-587 MuiGrid-align-content-xs-center-590 MuiGrid-justify-xs-center-595\\"
-                   >
-                     <div
-                       class=\\"MuiGrid-item-579 Alert-icon-1119 alert-icon\\"
-                     >
-                       <svg
-                         aria-hidden=\\"true\\"
-                         class=\\"MuiSvgIcon-root-965 icon\\"
-                         focusable=\\"false\\"
-                         role=\\"presentation\\"
-                         viewBox=\\"0 0 24 24\\"
-                       >
-                         <path
-                           d=\\"M0 0h24v24H0z\\"
-                           fill=\\"none\\"
-                         />
-                         <path
-                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
-                         />
-                       </svg>
-                     </div>
-                     <div
-                       class=\\"MuiGrid-item-579 MuiGrid-grid-xs-true-606 Alert-text-1120 alert-text\\"
-                     >
-                       <b>
-                         Validation - 
-                       </b>
-                       <span>
-                         Form cannot be submitted until all fields are valid. Please review all input fields.
-                         <ul>
-                           <li>
-                             You are required to select a author from the list, then confirm that it is you
-                           </li>
-                         </ul>
-                       </span>
-                     </div>
-                   </div>
          </div>
-               </div>
-             </div>
-           </div>
-         </div>
          <div
            class=\\"MuiGrid-container-578 MuiGrid-spacing-xs-24-602\\"
          >
            <div
              class=\\"MuiGrid-item-579 MuiGrid-grid-xs-true-606\\"
@@ -930,21 +917,23 @@
            </div>
            <div
              class=\\"MuiGrid-item-579\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1016 MuiButtonBase-disabled-1017 MuiButton-root-1089 MuiButton-contained-1100 MuiButton-containedPrimary-1101 MuiButton-raised-1103 MuiButton-raisedPrimary-1104 MuiButton-disabled-1109 MuiButton-fullWidth-1114\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-1016 MuiButton-root-1089 MuiButton-contained-1100 MuiButton-containedPrimary-1101 MuiButton-raised-1103 MuiButton-raisedPrimary-1104 MuiButton-fullWidth-1114\\"
                id=\\"claimSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1090\\"
                >
                  Claim this work
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1019\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`ClaimRecord form should validate the form where applicable and submit correctly 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -407,12 +407,13 @@
                                >
                                  <div
                                    class=\\"MuiGrid-item-579 MuiGrid-grid-xs-12-618\\"
                                  >
                                    <button
-                                     class=\\"MuiButtonBase-root-1016 MuiButton-root-1089 MuiButton-text-1091 MuiButton-flat-1094 MuiButton-fullWidth-1114 AuthorItem-buttonBase-1116\\"
-                                     tabindex=\\"0\\"
+                                     class=\\"MuiButtonBase-root-1016 MuiButtonBase-disabled-1017 MuiButton-root-1089 MuiButton-text-1091 MuiButton-flat-1094 MuiButton-disabled-1109 MuiButton-fullWidth-1114 AuthorItem-buttonBase-1116\\"
+                                     disabled=\\"\\"
+                                     tabindex=\\"-1\\"
                                      type=\\"button\\"
                                    >
                                      <span
                                        class=\\"MuiButton-label-1090\\"
                                      >
@@ -431,13 +432,10 @@
                                            fill=\\"none\\"
                                          />
                                        </svg>
                                        Al-Ejeh, Fares
                                      </span>
-                                     <span
-                                       class=\\"MuiTouchRipple-root-1019\\"
-                                     />
                                    </button>
                                  </div>
                                  <div
                                    class=\\"MuiGrid-item-579 MuiGrid-grid-xs-12-618\\"
                                  >
@@ -505,14 +503,15 @@
                          </div>
                        </div>
                      </div>
                    </div>
                    <label
-                     class=\\"MuiFormControlLabel-root-1151 WithTheme-WithWidth-AuthorLinking---root-998\\"
+                     class=\\"MuiFormControlLabel-root-1151 WithTheme-WithWidth-AuthorLinking---root-998 MuiFormControlLabel-disabled-1153\\"
                    >
                      <span
-                       class=\\"MuiButtonBase-root-1016 MuiIconButton-root-1010 MuiSwitchBase-root-1161 MuiCheckbox-root-1155 WithTheme-WithWidth-AuthorLinking---checkboxRoot-1000 MuiCheckbox-colorSecondary-1160 MuiSwitchBase-checked-1162 MuiCheckbox-checked-1156 WithTheme-WithWidth-AuthorLinking---checkboxChecked-1001\\"
+                       class=\\"MuiButtonBase-root-1016 MuiButtonBase-disabled-1017 MuiIconButton-root-1010 MuiIconButton-disabled-1014 MuiSwitchBase-root-1161 MuiCheckbox-root-1155 WithTheme-WithWidth-AuthorLinking---checkboxRoot-1000 MuiCheckbox-colorSecondary-1160 MuiSwitchBase-checked-1162 MuiCheckbox-checked-1156 WithTheme-WithWidth-AuthorLinking---checkboxChecked-1001 MuiSwitchBase-disabled-1163 MuiCheckbox-disabled-1157\\"
+                       tabindex=\\"-1\\"
                      >
                        <span
                          class=\\"MuiIconButton-label-1015\\"
                        >
                          <svg
@@ -527,21 +526,19 @@
                            />
                          </svg>
                          <input
                            class=\\"MuiSwitchBase-input-1164\\"
                            data-indeterminate=\\"false\\"
+                           disabled=\\"\\"
                            id=\\"authorAcceptDeclaration\\"
                            type=\\"checkbox\\"
                            value=\\"\\"
                          />
                        </span>
-                       <span
-                         class=\\"MuiTouchRipple-root-1019\\"
-                       />
                      </span>
                      <span
-                       class=\\"MuiTypography-root-675 MuiTypography-body2-683 MuiFormControlLabel-label-1154\\"
+                       class=\\"MuiTypography-root-675 MuiTypography-body2-683 MuiFormControlLabel-label-1154 MuiFormControlLabel-disabled-1153\\"
                      >
                        <p
                          class=\\"MuiTypography-root-675 WithTheme-WithWidth-AuthorLinking---label-999 MuiTypography-body2-683 MuiTypography-colorSecondary-706\\"
                        >
                          I confirm and understand that I am claiming this work under the above name, and confirm this is me
@@ -634,23 +631,22 @@
                          id=\\"Please select relevant indicator(s).-label\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1065 MuiInput-root-1052 MuiInput-underline-1056 MuiInputBase-formControl-1066 MuiInput-formControl-1053\\"
+                         class=\\"MuiInputBase-root-1065 MuiInput-root-1052 MuiInput-underline-1056 MuiInputBase-disabled-1068 MuiInput-disabled-1055 MuiInputBase-formControl-1066 MuiInput-formControl-1053\\"
                        >
                          <div
                            class=\\"MuiSelect-root-1045\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-1046 MuiSelect-selectMenu-1049 MuiInputBase-input-1075 MuiInput-input-1060\\"
+                             class=\\"MuiSelect-select-1046 MuiSelect-selectMenu-1049 MuiSelect-disabled-1050 MuiInputBase-input-1075 MuiInput-input-1060 MuiInputBase-disabled-1068 MuiInput-disabled-1055\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
-                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
@@ -706,25 +702,26 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-1027 MuiFormControl-fullWidth-1030\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-1038 MuiInputLabel-root-1031 MuiInputLabel-formControl-1032 MuiInputLabel-animated-1035\\"
+                         class=\\"MuiFormLabel-root-1038 MuiFormLabel-disabled-1040 MuiInputLabel-root-1031 MuiInputLabel-formControl-1032 MuiInputLabel-animated-1035\\"
                          data-shrink=\\"false\\"
                          for=\\"Typeedits/changes/commentshere\\"
                          id=\\"Typeedits/changes/commentshere-label\\"
                        >
                          Type edits/changes/comments here
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1065 MuiInput-root-1052 MuiInput-underline-1056 MuiInputBase-fullWidth-1074 MuiInput-fullWidth-1059 MuiInputBase-formControl-1066 MuiInput-formControl-1053 MuiInputBase-multiline-1073 MuiInput-multiline-1058\\"
+                         class=\\"MuiInputBase-root-1065 MuiInput-root-1052 MuiInput-underline-1056 MuiInputBase-disabled-1068 MuiInput-disabled-1055 MuiInputBase-fullWidth-1074 MuiInput-fullWidth-1059 MuiInputBase-formControl-1066 MuiInput-formControl-1053 MuiInputBase-multiline-1073 MuiInput-multiline-1058\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
                            aria-label=\\"Type edits/changes/comments here\\"
                            aria-labelledby=\\"Typeedits/changes/commentshere-label\\"
-                           class=\\"MuiInputBase-input-1075 MuiInput-input-1060 MuiInputBase-inputMultiline-1077 MuiInput-inputMultiline-1062\\"
+                           class=\\"MuiInputBase-input-1075 MuiInput-input-1060 MuiInputBase-disabled-1068 MuiInput-disabled-1055 MuiInputBase-inputMultiline-1077 MuiInput-inputMultiline-1062\\"
+                           disabled=\\"\\"
                            id=\\"Typeedits/changes/commentshere\\"
                            label=\\"Type edits/changes/comments here\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
@@ -736,25 +733,26 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-1027 MuiFormControl-fullWidth-1030\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-1038 MuiInputLabel-root-1031 MuiInputLabel-formControl-1032 MuiInputLabel-animated-1035\\"
+                         class=\\"MuiFormLabel-root-1038 MuiFormLabel-disabled-1040 MuiInputLabel-root-1031 MuiInputLabel-formControl-1032 MuiInputLabel-animated-1035\\"
                          data-shrink=\\"false\\"
                          for=\\"Link(URL)\\"
                          id=\\"Link(URL)-label\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1065 MuiInput-root-1052 MuiInput-underline-1056 MuiInputBase-fullWidth-1074 MuiInput-fullWidth-1059 MuiInputBase-formControl-1066 MuiInput-formControl-1053\\"
+                         class=\\"MuiInputBase-root-1065 MuiInput-root-1052 MuiInput-underline-1056 MuiInputBase-disabled-1068 MuiInput-disabled-1055 MuiInputBase-fullWidth-1074 MuiInput-fullWidth-1059 MuiInputBase-formControl-1066 MuiInput-formControl-1053\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
                            aria-label=\\"Link (URL)\\"
                            aria-labelledby=\\"Link(URL)-label\\"
-                           class=\\"MuiInputBase-input-1075 MuiInput-input-1060\\"
+                           class=\\"MuiInputBase-input-1075 MuiInput-input-1060 MuiInputBase-disabled-1068 MuiInput-disabled-1055\\"
+                           disabled=\\"\\"
                            id=\\"Link(URL)\\"
                            label=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
@@ -802,11 +800,11 @@
                      <div
                        id=\\"FileUploadDropZone\\"
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"false\\"
+                         aria-disabled=\\"true\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-578 FileUploadDropzoneStaticContent-dropzone-1085\\"
@@ -876,10 +874,11 @@
                            </div>
                          </div>
                          <input
                            aria-label=\\"Upload files\\"
                            autocomplete=\\"off\\"
+                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -888,52 +887,100 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-579 MuiGrid-grid-xs-12-618\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-578 MuiGrid-spacing-xs-24-602 MuiGrid-align-items-xs-flex-start-587 MuiGrid-align-content-xs-center-590 MuiGrid-justify-xs-center-595 Alert-info_outline-1177 Alert-common-1165\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-579 MuiGrid-grid-xs-12-618 MuiGrid-grid-sm-true-620\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-578 MuiGrid-align-items-xs-flex-start-587 MuiGrid-align-content-xs-center-590 MuiGrid-justify-xs-center-595\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-579 Alert-icon-1166 alert-icon\\"
+                     >
+                       <div
+                         class=\\"MuiCircularProgress-root-1179 MuiCircularProgress-colorPrimary-1182 MuiCircularProgress-indeterminate-1181 spinner\\"
+                         role=\\"progressbar\\"
+                         style=\\"width: 38px; height: 38px;\\"
+                       >
+                         <svg
+                           class=\\"MuiCircularProgress-svg-1184\\"
+                           viewBox=\\"22 22 44 44\\"
+                         >
+                           <circle
+                             class=\\"MuiCircularProgress-circle-1185 MuiCircularProgress-circleIndeterminate-1187\\"
+                             cx=\\"44\\"
+                             cy=\\"44\\"
+                             fill=\\"none\\"
+                             r=\\"20.5\\"
+                             stroke-width=\\"3\\"
+                           />
+                         </svg>
+                       </div>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-579 MuiGrid-grid-xs-true-606 Alert-text-1167 alert-text\\"
+                     >
+                       <b>
+                         Saving - 
+                       </b>
+                       Claim publication is being processed.
+                     </div>
+                   </div>
                  </div>
+               </div>
+             </div>
+           </div>
+         </div>
          <div
            class=\\"MuiGrid-container-578 MuiGrid-spacing-xs-24-602\\"
          >
            <div
              class=\\"MuiGrid-item-579 MuiGrid-grid-xs-true-606\\"
            />
            <div
              class=\\"MuiGrid-item-579\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1016 MuiButton-root-1089 MuiButton-contained-1100 MuiButton-raised-1103 MuiButton-fullWidth-1114\\"
-               tabindex=\\"0\\"
+               class=\\"MuiButtonBase-root-1016 MuiButtonBase-disabled-1017 MuiButton-root-1089 MuiButton-contained-1100 MuiButton-raised-1103 MuiButton-disabled-1109 MuiButton-fullWidth-1114\\"
+               disabled=\\"\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1090\\"
                >
                  Cancel this claim
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1019\\"
-               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-579\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1016 MuiButton-root-1089 MuiButton-contained-1100 MuiButton-containedPrimary-1101 MuiButton-raised-1103 MuiButton-raisedPrimary-1104 MuiButton-fullWidth-1114\\"
+               class=\\"MuiButtonBase-root-1016 MuiButtonBase-disabled-1017 MuiButton-root-1089 MuiButton-contained-1100 MuiButton-containedPrimary-1101 MuiButton-raised-1103 MuiButton-raisedPrimary-1104 MuiButton-disabled-1109 MuiButton-fullWidth-1114\\"
+               disabled=\\"\\"
                id=\\"claimSubmit\\"
-               tabindex=\\"0\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1090\\"
                >
                  Claim this work
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1019\\"
-               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`ClaimRecord form should validate the form where applicable and submit correctly 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -301,11 +301,11 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div />
+           <span />
            <div
              class=\\"MuiGrid-item-579 MuiGrid-grid-xs-12-618\\"
            >
              <div
                class=\\"MuiPaper-root-922 MuiPaper-elevation1-925 MuiPaper-rounded-923 MuiCard-root-921 Cards-card-917 StandardCard\\"
@@ -407,13 +407,12 @@
                                >
                                  <div
                                    class=\\"MuiGrid-item-579 MuiGrid-grid-xs-12-618\\"
                                  >
                                    <button
-                                     class=\\"MuiButtonBase-root-1016 MuiButtonBase-disabled-1017 MuiButton-root-1089 MuiButton-text-1091 MuiButton-flat-1094 MuiButton-disabled-1109 MuiButton-fullWidth-1114 AuthorItem-buttonBase-1116\\"
-                                     disabled=\\"\\"
-                                     tabindex=\\"-1\\"
+                                     class=\\"MuiButtonBase-root-1016 MuiButton-root-1089 MuiButton-text-1091 MuiButton-flat-1094 MuiButton-fullWidth-1114 AuthorItem-buttonBase-1116\\"
+                                     tabindex=\\"0\\"
                                      type=\\"button\\"
                                    >
                                      <span
                                        class=\\"MuiButton-label-1090\\"
                                      >
@@ -432,10 +431,13 @@
                                            fill=\\"none\\"
                                          />
                                        </svg>
                                        Al-Ejeh, Fares
                                      </span>
+                                     <span
+                                       class=\\"MuiTouchRipple-root-1019\\"
+                                     />
                                    </button>
                                  </div>
                                  <div
                                    class=\\"MuiGrid-item-579 MuiGrid-grid-xs-12-618\\"
                                  >
@@ -503,15 +505,14 @@
                          </div>
                        </div>
                      </div>
                    </div>
                    <label
-                     class=\\"MuiFormControlLabel-root-1151 WithTheme-WithWidth-AuthorLinking---root-998 MuiFormControlLabel-disabled-1153\\"
+                     class=\\"MuiFormControlLabel-root-1151 WithTheme-WithWidth-AuthorLinking---root-998\\"
                    >
                      <span
-                       class=\\"MuiButtonBase-root-1016 MuiButtonBase-disabled-1017 MuiIconButton-root-1010 MuiIconButton-disabled-1014 MuiSwitchBase-root-1161 MuiCheckbox-root-1155 WithTheme-WithWidth-AuthorLinking---checkboxRoot-1000 MuiCheckbox-colorSecondary-1160 MuiSwitchBase-checked-1162 MuiCheckbox-checked-1156 WithTheme-WithWidth-AuthorLinking---checkboxChecked-1001 MuiSwitchBase-disabled-1163 MuiCheckbox-disabled-1157\\"
-                       tabindex=\\"-1\\"
+                       class=\\"MuiButtonBase-root-1016 MuiIconButton-root-1010 MuiSwitchBase-root-1161 MuiCheckbox-root-1155 WithTheme-WithWidth-AuthorLinking---checkboxRoot-1000 MuiCheckbox-colorSecondary-1160 MuiSwitchBase-checked-1162 MuiCheckbox-checked-1156 WithTheme-WithWidth-AuthorLinking---checkboxChecked-1001\\"
                      >
                        <span
                          class=\\"MuiIconButton-label-1015\\"
                        >
                          <svg
@@ -526,19 +527,21 @@
                            />
                          </svg>
                          <input
                            class=\\"MuiSwitchBase-input-1164\\"
                            data-indeterminate=\\"false\\"
-                           disabled=\\"\\"
                            id=\\"authorAcceptDeclaration\\"
                            type=\\"checkbox\\"
                            value=\\"\\"
                          />
                        </span>
+                       <span
+                         class=\\"MuiTouchRipple-root-1019\\"
+                       />
                      </span>
                      <span
-                       class=\\"MuiTypography-root-675 MuiTypography-body2-683 MuiFormControlLabel-label-1154 MuiFormControlLabel-disabled-1153\\"
+                       class=\\"MuiTypography-root-675 MuiTypography-body2-683 MuiFormControlLabel-label-1154\\"
                      >
                        <p
                          class=\\"MuiTypography-root-675 WithTheme-WithWidth-AuthorLinking---label-999 MuiTypography-body2-683 MuiTypography-colorSecondary-706\\"
                        >
                          I confirm and understand that I am claiming this work under the above name, and confirm this is me
@@ -631,22 +634,23 @@
                          id=\\"Please select relevant indicator(s).-label\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1065 MuiInput-root-1052 MuiInput-underline-1056 MuiInputBase-disabled-1068 MuiInput-disabled-1055 MuiInputBase-formControl-1066 MuiInput-formControl-1053\\"
+                         class=\\"MuiInputBase-root-1065 MuiInput-root-1052 MuiInput-underline-1056 MuiInputBase-formControl-1066 MuiInput-formControl-1053\\"
                        >
                          <div
                            class=\\"MuiSelect-root-1045\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-1046 MuiSelect-selectMenu-1049 MuiSelect-disabled-1050 MuiInputBase-input-1075 MuiInput-input-1060 MuiInputBase-disabled-1068 MuiInput-disabled-1055\\"
+                             class=\\"MuiSelect-select-1046 MuiSelect-selectMenu-1049 MuiInputBase-input-1075 MuiInput-input-1060\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
+                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              style=\\"border: 1px solid red;\\"
@@ -702,26 +706,25 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-1027 MuiFormControl-fullWidth-1030\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-1038 MuiFormLabel-disabled-1040 MuiInputLabel-root-1031 MuiInputLabel-formControl-1032 MuiInputLabel-animated-1035\\"
+                         class=\\"MuiFormLabel-root-1038 MuiInputLabel-root-1031 MuiInputLabel-formControl-1032 MuiInputLabel-animated-1035\\"
                          data-shrink=\\"false\\"
                          for=\\"Typeedits/changes/commentshere\\"
                          id=\\"Typeedits/changes/commentshere-label\\"
                        >
                          Type edits/changes/comments here
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1065 MuiInput-root-1052 MuiInput-underline-1056 MuiInputBase-disabled-1068 MuiInput-disabled-1055 MuiInputBase-fullWidth-1074 MuiInput-fullWidth-1059 MuiInputBase-formControl-1066 MuiInput-formControl-1053 MuiInputBase-multiline-1073 MuiInput-multiline-1058\\"
+                         class=\\"MuiInputBase-root-1065 MuiInput-root-1052 MuiInput-underline-1056 MuiInputBase-fullWidth-1074 MuiInput-fullWidth-1059 MuiInputBase-formControl-1066 MuiInput-formControl-1053 MuiInputBase-multiline-1073 MuiInput-multiline-1058\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
                            aria-label=\\"Type edits/changes/comments here\\"
                            aria-labelledby=\\"Typeedits/changes/commentshere-label\\"
-                           class=\\"MuiInputBase-input-1075 MuiInput-input-1060 MuiInputBase-disabled-1068 MuiInput-disabled-1055 MuiInputBase-inputMultiline-1077 MuiInput-inputMultiline-1062\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-1075 MuiInput-input-1060 MuiInputBase-inputMultiline-1077 MuiInput-inputMultiline-1062\\"
                            id=\\"Typeedits/changes/commentshere\\"
                            label=\\"Type edits/changes/comments here\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
@@ -733,26 +736,25 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-1027 MuiFormControl-fullWidth-1030\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-1038 MuiFormLabel-disabled-1040 MuiInputLabel-root-1031 MuiInputLabel-formControl-1032 MuiInputLabel-animated-1035\\"
+                         class=\\"MuiFormLabel-root-1038 MuiInputLabel-root-1031 MuiInputLabel-formControl-1032 MuiInputLabel-animated-1035\\"
                          data-shrink=\\"false\\"
                          for=\\"Link(URL)\\"
                          id=\\"Link(URL)-label\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-1065 MuiInput-root-1052 MuiInput-underline-1056 MuiInputBase-disabled-1068 MuiInput-disabled-1055 MuiInputBase-fullWidth-1074 MuiInput-fullWidth-1059 MuiInputBase-formControl-1066 MuiInput-formControl-1053\\"
+                         class=\\"MuiInputBase-root-1065 MuiInput-root-1052 MuiInput-underline-1056 MuiInputBase-fullWidth-1074 MuiInput-fullWidth-1059 MuiInputBase-formControl-1066 MuiInput-formControl-1053\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
                            aria-label=\\"Link (URL)\\"
                            aria-labelledby=\\"Link(URL)-label\\"
-                           class=\\"MuiInputBase-input-1075 MuiInput-input-1060 MuiInputBase-disabled-1068 MuiInput-disabled-1055\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-1075 MuiInput-input-1060\\"
                            id=\\"Link(URL)\\"
                            label=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
@@ -800,11 +802,11 @@
                      <div
                        id=\\"FileUploadDropZone\\"
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"true\\"
+                         aria-disabled=\\"false\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-578 FileUploadDropzoneStaticContent-dropzone-1085\\"
@@ -874,11 +876,10 @@
                            </div>
                          </div>
                          <input
                            aria-label=\\"Upload files\\"
                            autocomplete=\\"off\\"
-                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -895,48 +896,44 @@
              <div
                class=\\"Alert\\"
                style=\\"padding: 12px;\\"
              >
                <div
-                 class=\\"MuiGrid-container-578 MuiGrid-spacing-xs-24-602 MuiGrid-align-items-xs-flex-start-587 MuiGrid-align-content-xs-center-590 MuiGrid-justify-xs-center-595 Alert-info_outline-1177 Alert-common-1165\\"
+                 class=\\"MuiGrid-container-578 MuiGrid-spacing-xs-24-602 MuiGrid-align-items-xs-flex-start-587 MuiGrid-align-content-xs-center-590 MuiGrid-justify-xs-center-595 Alert-done-1201 Alert-common-1188\\"
                >
                  <div
                    class=\\"MuiGrid-item-579 MuiGrid-grid-xs-12-618 MuiGrid-grid-sm-true-620\\"
                  >
                    <div
                      class=\\"MuiGrid-container-578 MuiGrid-align-items-xs-flex-start-587 MuiGrid-align-content-xs-center-590 MuiGrid-justify-xs-center-595\\"
                    >
                      <div
-                       class=\\"MuiGrid-item-579 Alert-icon-1166 alert-icon\\"
+                       class=\\"MuiGrid-item-579 Alert-icon-1189 alert-icon\\"
                      >
-                       <div
-                         class=\\"MuiCircularProgress-root-1179 MuiCircularProgress-colorPrimary-1182 MuiCircularProgress-indeterminate-1181 spinner\\"
-                         role=\\"progressbar\\"
-                         style=\\"width: 38px; height: 38px;\\"
-                       >
                        <svg
-                           class=\\"MuiCircularProgress-svg-1184\\"
-                           viewBox=\\"22 22 44 44\\"
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-965 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
                        >
-                           <circle
-                             class=\\"MuiCircularProgress-circle-1185 MuiCircularProgress-circleIndeterminate-1187\\"
-                             cx=\\"44\\"
-                             cy=\\"44\\"
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
                            fill=\\"none\\"
-                             r=\\"20.5\\"
-                             stroke-width=\\"3\\"
+                         />
+                         <path
+                           d=\\"M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z\\"
                          />
                        </svg>
-                       </div>
                      </div>
                      <div
-                       class=\\"MuiGrid-item-579 MuiGrid-grid-xs-true-606 Alert-text-1167 alert-text\\"
+                       class=\\"MuiGrid-item-579 MuiGrid-grid-xs-true-606 Alert-text-1190 alert-text\\"
                      >
                        <b>
-                         Saving - 
+                         Success - 
                        </b>
-                       Claim publication is being processed.
+                       Publication claim has been submitted successfully.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -950,37 +947,41 @@
            />
            <div
              class=\\"MuiGrid-item-579\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1016 MuiButtonBase-disabled-1017 MuiButton-root-1089 MuiButton-contained-1100 MuiButton-raised-1103 MuiButton-disabled-1109 MuiButton-fullWidth-1114\\"
-               disabled=\\"\\"
-               tabindex=\\"-1\\"
+               class=\\"MuiButtonBase-root-1016 MuiButton-root-1089 MuiButton-contained-1100 MuiButton-raised-1103 MuiButton-fullWidth-1114\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1090\\"
                >
                  Cancel this claim
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1019\\"
+               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-579\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1016 MuiButtonBase-disabled-1017 MuiButton-root-1089 MuiButton-contained-1100 MuiButton-containedPrimary-1101 MuiButton-raised-1103 MuiButton-raisedPrimary-1104 MuiButton-disabled-1109 MuiButton-fullWidth-1114\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-1016 MuiButton-root-1089 MuiButton-contained-1100 MuiButton-containedPrimary-1101 MuiButton-raised-1103 MuiButton-raisedPrimary-1104 MuiButton-fullWidth-1114\\"
                id=\\"claimSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1090\\"
                >
                  Claim this work
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1019\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;
